fix filter nav on mobile

--- a/src/css/responsive.less
+++ b/src/css/responsive.less
@@ -1,7 +1,3 @@
-.show-mobile {
-	display: none;
-}
-
 @media only screen and (min-width: 700px) and (max-width: 1010px) {	
 	.event-list,
 	.space-list {
@@ -55,14 +51,6 @@
 		padding-left: 0;
 		border-left: 0;
 	}
-
-	.show-mobile {
-		display: block;
-	}
-
-	.hide-mobile {
-		display: none !important;
-	}
 }
 
 @media only screen and (max-width: 959px) {
@@ -110,8 +98,8 @@
 		}
 		.close {
 			position: absolute;
-			top: 40px;
-			right: 40px;
+			top: 0;
+			right: 0;
 			margin: 0;
 			padding: 0;
 		}
